Fix versions Use resilience4j instead of Hystrix